CSS con frontend acabado

--- a/css/detalles.css
+++ b/css/detalles.css
@@ -6,24 +6,177 @@
 body{
     background-color: #EDF2EF;
 }
+/*CAPA SUPERIOR DEL MENU HAMBURGUESA,
+EL CHECKBOX VA POR ENCIMA DEL CONTENEDOR Y LAS LINEAS.*/
+#invisibleCheckbox{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    margin-top: 2%;
+    left: 2%;
+    opacity: 0%;
+    z-index: 15;
+}
+
+/*CAPA INTERMEDIA DEL MENU HAMBURGUESA,
+LAS LINEAS ESTAN VISIBLE POR ENCIMA DEL CONTENEDOR.*/
+
+/*Esta es la linea intermedia*/
+.lineaHamburguesa{
+    background-color: #F97068;
+    display: inline-block;
+    height: 5px;
+    left: 10px;
+    margin-top: -1px;
+    position: absolute;
+    top: 50%;
+    transition: .4s;
+    width: 40px;
+    border-radius: 2px;
+}
+
+/*Esta es la linea superior*/
+.lineaHamburguesa:first-child{
+    background-color: #F97068;
+    display: inline-block;
+    height: 5px;
+    left: 10px;
+    margin-top: -1px;
+    position: absolute;
+    top: 25%;
+    transition: .4s;
+    width: 40px;
+    border-radius: 2px;
+}
+
+/*Esta es la linea inferior*/
+.lineaHamburguesa:last-child{
+    background-color: #F97068;
+    display: inline-block;
+    height: 5px;
+    left: 10px;
+    margin-top: -1px;
+    position: absolute;
+    top: 75%;
+    transition: .4s;
+    width: 40px;
+    border-radius: 2px;
+}
+
+/*CAPA INFERIOR, ES EL CONTENEDOR DEL MENU HAMBURGUESA,
+SIMPLEMENTE ESTA DE FONDO.*/
+#contenedorHamburguesa{
+    display: inline-block;
+    position: absolute;
+    left: 2%;
+    /*background-color: rgb(255, 104, 49);*/
+    width: 60px;
+    height: 60px;
+    margin-top: 2%;
+    z-index: 5;
+}
+
+/*--------------------------------------------------------------*/
+
+/*Cajon verde que lleva las secciones del menú*/
+#barraDesplegable{
+    position: absolute;
+    top: 0;
+    left: -250px;
+    background-color: #C8E7ED;
+    height: 100vh;
+    width: 250px;
+    text-align: left;
+    padding-top: 7%;
+    z-index: 1;
+}
+
+/*Secciones del menu hamburguesa*/
+.apartados{
+    margin-left: 10%;
+    margin-top: 1vh;
+    list-style: none;
+    font-family: 'Exo', sans-serif;
+    font-size: 1.5em;
+}
+
+/*--------------------------------------------------------------------*/
+
+/*Efecto de las secciones del menú*/
+li:hover{
+    font-weight: bold;
+    color: #F97068;
+}
+li:last-of-type{
+    font-weight: bold;
+    color: #F97068;
+}
+
+/*--------------------------------------------------------------*/
+
+/*Transicion de salida del menú hamburguesa*/
+#invisibleCheckbox:checked~#barraDesplegable{
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition-duration: 0.5s;
+    transition-property: all;
+}
+
+/*Transicion de recogida del menú hamburguesa*/
+#invisibleCheckbox:not(:checked)~#barraDesplegable{
+    position: absolute;
+    top: 0;
+    left: -20vw;
+    transition-duration: 0.5s;
+    transition-property: all;
+}
+
+/*Transicion de rotacion de la barra superior del menú*/
+#invisibleCheckbox:checked~#contenedorHamburguesa>#linea1{
+    background-color: #F97068;
+    transform: rotateZ(50deg);
+    transform-origin: left;
+}
+
+/*Transicion de ocultacion de la segunda barra del menú*/
+#invisibleCheckbox:checked~#contenedorHamburguesa>#linea2{
+    background-color: #F97068;
+    transform: rotateY(90deg);
+    transform-origin: left;
+    opacity: 10;
+}
+
+/*Transicion de rotacion de la barra inferior del menú*/
+#invisibleCheckbox:checked~#contenedorHamburguesa>#linea3{
+    background-color: #F97068;
+    transform: rotateZ(-50deg);
+    transform-origin: left;
+}
+/* Damos formato al logo */
 .logo{
     text-align: center;
+    top: 0;
+    position: absolute;
+    left: 40%;
 }
+/* Damos formato a contenido con grid */
 .contenido{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     width: 80%;
-    margin: auto;
+    margin: 100px auto;
     gap: 10px;
 }
+/* Damos formato a la imagen haciedo que ocupe dos filas */
 .imagen{
-    /* border: solid 1px red; */
-    grid-row-end: span 1;
+    grid-row-end: span 2;
     text-align: center;
 }
 .imagen img{
-    width: 75%;
+    width: 60%;
 }
+/* Damos formato a los datos que se mostrarán al usuario */
 .datos{
     display: block;
 }
@@ -37,25 +190,28 @@ body{
 .descripcion{
     font-size: 1.25em;
 }
+/* Damos formato a los botones de generar el qr y el de hacer pedido */
 form{
-    width: 20%;
+    width: 25%;
 }
 .qr{
-    position: absolute;
-    /*! left: 20%; MODIFICAR */
+    background-color: #F97068;
+    padding: 15px;
+    font-size: 1.25em;
+    border-radius: 25px;
+    border: solid 2px black;
 }
-/* .nombre{
-    border: solid 1px pink;
+.pedido{
+    background-color: #F97068;
+    padding: 15px;
+    font-size: 1.25em;
+    border-radius: 25px;
+    border: solid 2px black;
 }
-.precio{
-    border: solid 1px blue;
-}
-.unidades{
-    border: solid 1px purple;
-}
-.descripcion{
-    border: solid 1px black;
-} */
 .boton{
     margin-top: 5px;
+}
+.formularios{
+    display: flex;
+    flex-flow: row nowrap;
 }
