--- a/css/detalles.css
+++ b/css/detalles.css
@@ -25,7 +25,7 @@ LAS LINEAS ESTAN VISIBLE POR ENCIMA DEL CONTENEDOR.*/
 
 /*Esta es la linea intermedia*/
 .lineaHamburguesa {
-    background-color: #F97068;
+    background-color: #ffa19d;
     display: inline-block;
     height: 5px;
     left: 10px;
@@ -39,7 +39,7 @@ LAS LINEAS ESTAN VISIBLE POR ENCIMA DEL CONTENEDOR.*/
 
 /*Esta es la linea superior*/
 .lineaHamburguesa:first-child {
-    background-color: #F97068;
+    background-color: #ffa19d;
     display: inline-block;
     height: 5px;
     left: 10px;
@@ -53,7 +53,7 @@ LAS LINEAS ESTAN VISIBLE POR ENCIMA DEL CONTENEDOR.*/
 
 /*Esta es la linea inferior*/
 .lineaHamburguesa:last-child {
-    background-color: #F97068;
+    background-color: #ffa19d;
     display: inline-block;
     height: 5px;
     left: 10px;
@@ -107,12 +107,12 @@ SIMPLEMENTE ESTA DE FONDO.*/
 /*Efecto de las secciones del menú*/
 li:hover {
     font-weight: bold;
-    color: #F97068;
+    color: #ffa19d;
 }
 
 li:last-of-type {
     font-weight: bold;
-    color: #F97068;
+    color: #ffa19d;
 }
 
 /*--------------------------------------------------------------*/
@@ -137,14 +137,14 @@ li:last-of-type {
 
 /*Transicion de rotacion de la barra superior del menú*/
 #invisibleCheckbox:checked~#contenedorHamburguesa>#linea1 {
-    background-color: #F97068;
+    background-color: #ffa19d;
     transform: rotateZ(50deg);
     transform-origin: left;
 }
 
 /*Transicion de ocultacion de la segunda barra del menú*/
 #invisibleCheckbox:checked~#contenedorHamburguesa>#linea2 {
-    background-color: #F97068;
+    background-color: #ffa19d;
     transform: rotateY(90deg);
     transform-origin: left;
     opacity: 10;
@@ -152,7 +152,7 @@ li:last-of-type {
 
 /*Transicion de rotacion de la barra inferior del menú*/
 #invisibleCheckbox:checked~#contenedorHamburguesa>#linea3 {
-    background-color: #F97068;
+    background-color: #ffa19d;
     transform: rotateZ(-50deg);
     transform-origin: left;
 }
@@ -210,7 +210,7 @@ form {
 }
 
 .qr {
-    background-color: #F97068;
+    background-color: #ffa19d;
     padding: 15px;
     font-size: 1.25em;
     border-radius: 25px;
