--- a/css/styleInicio.css
+++ b/css/styleInicio.css
@@ -170,7 +170,13 @@ li:last-of-type {
     border: 3px solid black;
     border-radius: 10px;
 }
-
+.fotoPerfil{
+    margin-left:10%;
+    border:1px solid black;
+    border-radius:20px;
+    width:200px;
+    height:200px;
+}
 #nombreUsuario {
     display: block;
     margin-left: 10%;
