Arreglada una ruta de registro

--- a/templates/registroProducto.html
+++ b/templates/registroProducto.html
@@ -13,8 +13,8 @@
     <div id="contenedorImagen">
         <img src="../img/LOGO.png" alt="Logo">
     </div>
-        <h2>REGISTRA UN NUEVO PRODUCTO</h2>
-    <form action="./../registroProducto.php" method="post" enctype="multipart/form-data">
+    <h2>REGISTRA UN NUEVO PRODUCTO</h2>
+    <form action="./../app/controller/registroProducto.php" method="post" enctype="multipart/form-data">
         <input type="text" name="nombre" placeholder="Nombre Producto" required>
         <input type="number" name="cantidad" placeholder="Cantidad" required>
         <input type="text" name="proveedor" placeholder="Proveedor" required>
